@@ -1,3 +1,4 @@
-"""package
+"""Integration with eea.relations that allows packages to set ordered 
+relations to specified daviz charts
 """
 
